补充调优样例